--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
       - master
 
   pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ci-${{ github.head_ref || github.ref }}
@@ -14,6 +15,10 @@ concurrency:
 
 env:
   CARGO_TERM_COLOR: always
+  # renovate: datasource=crate depName=cargo-deny versioning=semver
+  CARGO_DENY_VERSION: 0.16.4
+  # renovate: datasource=crate depName=cargo-machete versioning=semver
+  CARGO_MACHETE_VERSION: 0.7.0
 
 jobs:
   changed-files:
@@ -71,3 +76,22 @@ jobs:
       - run: cargo clippy --all-targets --all-features --workspace
       - run: cargo doc --no-deps --document-private-items
 
+  deps:
+    name: Dependencies
+    runs-on: ubuntu-24.04
+    needs: changed-files
+    # if: github.event_name != 'pull_request' || needs.changed-files.outputs.rust-lockfile == 'true'
+    if: github.event_name != 'pull_request' || needs.changed-files.outputs.rust == 'true'
+
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+
+      - uses: Swatinem/rust-cache@f0deed1e0edfc6a9be95417288c0e1099b1eeec3 # v2.7.7
+
+      - run: cargo install cargo-deny --vers ${CARGO_DENY_VERSION}
+      - run: cargo deny check
+
+      - run: cargo install cargo-machete --vers ${CARGO_MACHETE_VERSION}
+      - run: cargo machete
