--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,45 @@ jobs:
 
       - run: cargo install cargo-machete --vers ${CARGO_MACHETE_VERSION}
       - run: cargo machete
+
+  test:
+    name: Test
+    runs-on: ubuntu-24.04
+    needs: changed-files
+    if: needs.changed-files.outputs.rust == 'true'
+
+    env:
+      RUST_BACKTRACE: 1
+      RUSTFLAGS: "-D warnings -Cinstrument-coverage"
+      MALLOC_CONF: "background_thread:true,abort_conf:true,abort:true,junk:true"
+      CARGO_TARGET_DIR: /mnt/target
+
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+
+      - uses: Swatinem/rust-cache@f0deed1e0edfc6a9be95417288c0e1099b1eeec3 # v2.7.7
+        with:
+          # Ensure that we cache from the right target directory. (See below
+          # for the details of how and when this gets created.)
+          workspaces: '. -> ${{ env.CARGO_TARGET_DIR }}'
+
+      # Create a working directory on /mnt, which is a larger temporary
+      # filesystem than /, that we can then point our later commands to.
+      - run: |
+          sudo mkdir ${CARGO_TARGET_DIR}
+          sudo chown $(id -u):$(id -g) ${CARGO_TARGET_DIR}
+
+      - run: cargo build --tests --workspace
+      - run: cargo test --workspace
+
+      - run: curl -sL https://github.com/mozilla/grcov/releases/download/v${GRCOV_VERSION}/grcov-x86_64-unknown-linux-gnu.tar.bz2 | tar xjf -
+      - run: rustup component add llvm-tools
+      - run: ./grcov . --binary-path ${CARGO_TARGET_DIR}/debug/ -s . -t lcov --branch --ignore-not-existing --ignore "/*" --ignore "${CARGO_TARGET_DIR}/debug/build/**" -o ${CARGO_TARGET_DIR}/coverage.lcov
+
+      - uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
+        with:
+          files: ${CARGO_TARGET_DIR}/coverage.lcov
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
