--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ env:
   CARGO_DENY_VERSION: 0.16.4
   # renovate: datasource=crate depName=cargo-machete versioning=semver
   CARGO_MACHETE_VERSION: 0.7.0
+  # renovate: datasource=crate depName=grcov versioning=semver
+  GRCOV_VERSION: 0.8.20
 
 jobs:
   changed-files:
